--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,24 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>StopMotion.Media</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body class='fill no-padding'>
+  <section class='fill'>
+    <video class='fill' id='video' autoplay></video>
+    <section class='camera-controls'>
+      <button id='camera-capture-button' class='camera-button'>
+      <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="0 0 58 58" xml:space="preserve">
+        <path d="M54.6 10H3.4C1.5 10 0 11.5 0 13.4v35.3C0 50.5 1.5 52 3.4 52h51.3c1.9 0 3.4-1.5 3.4-3.4V13.4C58 11.5 56.5 10 54.6 10zM56 48.6c0 0.8-0.6 1.4-1.4 1.4H3.4C2.6 50 2 49.4 2 48.6V13.4C2 12.6 2.6 12 3.4 12h51.3c0.8 0 1.4 0.6 1.4 1.4V48.6zM30 14c-9.4 0-17 7.6-17 17s7.6 17 17 17 17-7.6 17-17S39.4 14 30 14zM30 46c-8.3 0-15-6.7-15-15s6.7-15 15-15 15 6.7 15 15S38.3 46 30 46zM20 8h19c0.6 0 1-0.4 1-1s-0.4-1-1-1H20c-0.6 0-1 0.4-1 1S19.4 8 20 8z"
+        />
+      </svg>
+      </button>
+    </section>
+  </section>
+
+
+
   <script src='js/app.bundle.js' async></script>
   <script>
     // Load SW if applicable
